examples/negative/pub_enforcement/violation_transitive/leaf.kai
# Issue #565 — transitive negative fixture. `leaf` has a private
# helper. The consumer reaches `leaf` only through `mid`, but
# tries to bare-name the private helper. Privacy enforcement
# must report `leaf` as the offending module (not `mid`) and
# must not regress to allowing transitive private leaks.

fn leaf_private_helper() : Int = 7

pub fn leaf_public() : Int = leaf_private_helper()
